--- a/examples/sequence/sequence.html
+++ b/examples/sequence/sequence.html
@@ -6,20 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Title</title>
     <style>
-    .npt-content {
-      border: 1px solid gray;
-    }
     </style>
   </head>
 
   <body>
     <div id="playground"></div>
     <p>
-      <button onclick="longStringClick()">Long string</button>
-      <button onclick="shortStringClick()">Short string</button>
+      <button onclick="pushClick()">Push</button>
     </p>
     <script src="../../dist/main.js"></script>
     <script src="../base.js"></script>
-    <script src="./text.js"></script>
+    <script src="./sequence.js"></script>
   </body>
 </html>
