--- a/examples/sequence/sequence.html
+++ b/examples/sequence/sequence.html
@@ -4,9 +4,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Title</title>
-    <style>
-    </style>
+    <title>Neptune Example</title>
   </head>
 
   <body>
