--- a/examples/1 Elements/sequence/sequence.html
+++ b/examples/1 Elements/sequence/sequence.html
@@ -12,8 +12,8 @@
     <p>
       <button onclick="pushClick()">Push</button>
     </p>
-    <script src="../../dist/main.js"></script>
-    <script src="../base.js"></script>
+    <script src="../../../dist/main.js"></script>
+    <script src="../../base.js"></script>
     <script src="./sequence.js"></script>
   </body>
 </html>
