--- a/examples/1 Elements/sequence/sequence.html
+++ b/examples/1 Elements/sequence/sequence.html
@@ -10,8 +10,10 @@
   <body>
     <div id="playground"></div>
     <p>
+      <button onclick="pushFrontClick()">Push front</button>
       <button onclick="pushClick()">Push</button>
     </p>
+    <script src="./web-animations.min.js"></script>
     <script src="../../../dist/main.js"></script>
     <script src="../../base.js"></script>
     <script src="./sequence.js"></script>
