--- a/examples/sequence/sequence.html
+++ b/examples/sequence/sequence.html
@@ -14,8 +14,8 @@
       <button onclick="pushClick()">Push</button>
     </p>
     <script src="./web-animations.min.js"></script>
-    <script src="../../../dist/main.js"></script>
-    <script src="../../base.js"></script>
+    <script src="../../dist/main.js"></script>
+    <script src="../base.js"></script>
     <script src="./sequence.js"></script>
   </body>
 </html>
