Demonstrate popBack and popFront

--- a/examples/sequence/sequence.html
+++ b/examples/sequence/sequence.html
@@ -11,7 +11,9 @@
     <div id="playground"></div>
     <p>
       <button onclick="pushFrontClick()">Push front</button>
-      <button onclick="pushClick()">Push</button>
+      <button onclick="pushBackClick()">Push back</button>
+      <button onclick="popFrontClick()">Pop front</button>
+      <button onclick="popBackClick()">Pop back</button>
     </p>
     <script src="../../dist/main.js"></script>
     <script src="../base.js"></script>
