Update sequence example

--- a/examples/sequence/sequence.html
+++ b/examples/sequence/sequence.html
@@ -15,6 +15,12 @@
       <button onclick="popFrontClick()">Pop front</button>
       <button onclick="popBackClick()">Pop back</button>
     </p>
+    <p>
+      <button onclick="pushFrontSyncClick()">Push front (no animation)</button>
+      <button onclick="pushBackSyncClick()">Push back (no animation)</button>
+      <button onclick="popFrontSyncClick()">Pop front (no animation)</button>
+      <button onclick="popBackSyncClick()">Pop back (no animation)</button>
+    </p>
     <script src="../../dist/main.js"></script>
     <script src="../base.js"></script>
     <script src="./sequence.js"></script>
