Implement atom.setContentAsync

--- a/examples/sequence/sequence.html
+++ b/examples/sequence/sequence.html
@@ -21,6 +21,9 @@
       <button onclick="popFrontSyncClick()">Pop front (no animation)</button>
       <button onclick="popBackSyncClick()">Pop back (no animation)</button>
     </p>
+    <p>
+      <button onclick="updateClick()">Update</button>
+    </p>
     <script src="../../dist/main.js"></script>
     <script src="../base.js"></script>
     <script src="./sequence.js"></script>
