Add atom.swapAsync method

--- a/examples/sequence/sequence.html
+++ b/examples/sequence/sequence.html
@@ -23,6 +23,7 @@
     </p>
     <p>
       <button onclick="updateClick()">Update</button>
+      <button onclick="swapClick()">Swap</button>
     </p>
     <script src="../../dist/main.js"></script>
     <script src="../base.js"></script>
